--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,18 @@
 <h1>Stocking</h1>
 <p> A rails app for stock tracking</p>
-<% stock = StockQuote::Stock.quote("fb") %>
 
-<%= stock.company_name %>
+<%= form_tag root_path, :methbod => 'POST' do %>
+    <%= text_field_tag 'ticker', nil, placeholder: "Enter Ticker Symbol", size: 50 %>
+    <%= submit_tag 'Lookup' %>
+<% end %>
+<br/>
+<% if @stock %>
+    <%= @stock.company_name %><br/>
+    $<%= @stock.latest_price %><br/>
+<% elsif @nothing %>
+    <%= @nothing %>
+<% end %>
+
+<% if @error %>
+    <%= @error %>
+<% end %>
