Commit of the day

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Stocking</h1>
 <p> A rails app for stock tracking</p>
 
-<%= form_tag root_path, :methbod => 'POST' do %>
+<%= form_tag root_path, :method => 'POST' do %>
     <%= text_field_tag 'ticker', nil, placeholder: "Enter Ticker Symbol", size: 50 %>
     <%= submit_tag 'Lookup' %>
 <% end %>
